[package]
name = "security-scanner"
version = "0.1.0"
edition = "2021"
description = "Lightweight security testing attributes for Rust applications"
license = "MIT"
repository = "https://github.com/rpdevjesco/rust-security-testing"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true